[package]
name = "bitcoin"
version = "0.1.0"
edition = "2018"

[lib]
name = "bitcoin"
crate-type = ["cdylib"]

[dependencies]
num-bigint = { version = "0.2.2" }
num-traits = "0.2"
num-integer = "0.1"
num = "0.4"
lazy_static = "1.4.0"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module", "num-bigint"]
